--- a/.github/workflows/php-composer-dependencies.yml
+++ b/.github/workflows/php-composer-dependencies.yml
@@ -12,13 +12,10 @@ on:
       # notest branches to ignore testing of partial online commits
       - 'notest/**'
 
-permissions:
-  contents: read
-
 jobs:
   # Note: https://docs.github.com/en/actions/using-workflows/reusing-workflows The strategy property is not supported in any job that calls a reusable workflow.
   call-workflow:
-    uses: WorkOfStan/seablast-actions/.github/workflows/php-composer-dependencies-reusable.yml@WorkOfStan-patch-1
+    uses: WorkOfStan/seablast-actions/.github/workflows/php-composer-dependencies-reusable.yml@main
     with:
       # JSON
       php-version: '["7.2", "7.3", "7.4", "8.2", "8.3"]'
