fix: Check: CKV2_GHA_1: "Ensure top-level permissions are not set to write-all"

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -24,6 +24,9 @@ on:
       # notest branches to ignore testing of partial online commits
       - 'notest/**'
 
+permissions:
+  contents: read
+
 ###############
 # Set the Job #
 ###############
