--- a/.github/workflows/overtrue-phplint.yml
+++ b/.github/workflows/overtrue-phplint.yml
@@ -10,6 +10,9 @@ on:
       # notest branches to ignore testing of partial online commits
       - 'notest/**'
 
+permissions:
+  contents: read
+
 jobs:
   call-workflow:
     uses: WorkOfStan/seablast-actions/.github/workflows/overtrue-phplint.yml@main
