--- a/.github/workflows/phpcbf.yml
+++ b/.github/workflows/phpcbf.yml
@@ -10,6 +10,9 @@ on:
     branches:
       - 'phpcbf*'
 
+permissions:
+  contents: write
+
 jobs:
   call-workflow:
     uses: WorkOfStan/seablast-actions/.github/workflows/phpcbf.yml@main
