linter update test

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -32,4 +32,4 @@ permissions:
 ###############
 jobs:
   call-workflow:
-    uses: WorkOfStan/seablast-actions/.github/workflows/linter.yml@main
+    uses: WorkOfStan/seablast-actions/.github/workflows/linter.yml@feature/default-branch
