chore: PHP/8.5 support added (#9)

--- a/.github/workflows/polish-the-code.yml
+++ b/.github/workflows/polish-the-code.yml
@@ -24,10 +24,10 @@ permissions:
 jobs:
   # Note: https://docs.github.com/en/actions/using-workflows/reusing-workflows The strategy property is not supported in any job that calls a reusable workflow.
   php-composer-unit-stan:
-    uses: WorkOfStan/seablast-actions/.github/workflows/php-composer-dependencies-reusable.yml@v0.2.4
+    uses: WorkOfStan/seablast-actions/.github/workflows/php-composer-dependencies-reusable.yml@v0.2.6
     with:
       # JSON
-      php-version: '["7.2", "7.3", "7.4", "8.0", "8.1", "8.2", "8.3", "8.4"]'
+      php-version: '["7.2", "7.3", "7.4", "8.0", "8.1", "8.2", "8.3", "8.4", "8.5"]'
       runs-on: "ubuntu-latest"
 
   prettier-fix:
@@ -40,7 +40,7 @@ jobs:
     timeout-minutes: 10
     steps:
       - name: Invoke the Prettier fix
-        uses: WorkOfStan/prettier-fix@v1.1.5
+        uses: WorkOfStan/prettier-fix@v1.1.6.1
         with:
           commit-changes: ${{ github.event_name != 'schedule' }}
 
@@ -53,7 +53,7 @@ jobs:
     timeout-minutes: 10
     steps:
       - name: Invoke the PHPCS check and PHPCBF fix
-        uses: WorkOfStan/phpcs-fix@v1.0.2
+        uses: WorkOfStan/phpcs-fix@v1.0.3
         with:
           commit-changes: ${{ github.event_name != 'schedule' }}
           php-version: "8.2"
@@ -61,6 +61,6 @@ jobs:
 
   super-linter:
     needs: phpcs-phpcbf
-    uses: WorkOfStan/seablast-actions/.github/workflows/linter.yml@v0.2.4
+    uses: WorkOfStan/seablast-actions/.github/workflows/linter.yml@v0.2.6
     with:
       runs-on: "ubuntu-latest"
